--- a/recipes-gnss/rtklibexplorer/files/rtkrcv.conf
+++ b/recipes-gnss/rtklibexplorer/files/rtkrcv.conf
@@ -8,10 +8,10 @@ inpstr1-type       =serial         # (0:off,1:serial,2:file,3:tcpsvr,4:tcpcli,7:
 inpstr2-type       =off            # (0:off,1:serial,2:file,3:tcpsvr,4:tcpcli,7:ntripcli,8:ftp,9:http)
 inpstr3-type       =ftp            # (0:off,1:serial,2:file,3:tcpsvr,4:tcpcli,7:ntripcli,8:ftp,9:http)
 inpstr1-path       =ttyACM0:115200:8:n:1:off
-inpstr2-path       =ttyS1:115200:8:n:1:off
-inpstr3-path       =anonymous:passwd@cddis.gsfc.nasa.gov/gps/products/%W/igu%W%D_%hb.sp3.Z::T=-14400,21600,7200,600
+inpstr2-path       =127.0.0.1:3139
+inpstr3-path       =anonymous:user@cddis.gsfc.nasa.gov/gnss/products/%W/igu%W%D_%hb.sp3.Z::T=-10800,21600,10800,600
 inpstr1-format     =ubx            # (0:rtcm2,1:rtcm3,2:oem4,3:oem3,4:ubx,5:ss2,6:hemis,7:skytraq,14:sp3)
-inpstr2-format     =oem4           # (0:rtcm2,1:rtcm3,2:oem4,3:oem3,4:ubx,5:ss2,6:hemis,7:skytraq,14:sp3)
+inpstr2-format     =ubx            # (0:rtcm2,1:rtcm3,2:oem4,3:oem3,4:ubx,5:ss2,6:hemis,7:skytraq,14:sp3)
 inpstr3-format     =sp3            # (0:rtcm2,1:rtcm3,2:oem4,3:oem3,4:ubx,5:ss2,6:hemis,7:skytraq,14:sp3)
 inpstr2-nmeareq    =off            # (0:off,1:latlon,2:single)
 inpstr2-nmealat    =0              # (deg)
@@ -50,7 +50,7 @@ pos1-ionoopt       =brdc           # (0:off,1:brdc,2:sbas,3:dual-freq,4:est-stec
 pos1-tropopt       =saas           # (0:off,1:saas,2:sbas,3:est-ztd,4:est-ztdgrad)
 pos1-sateph        =brdc           # (0:brdc,1:precise,2:brdc+sbas,3:brdc+ssrapc,4:brdc+ssrcom)
 pos1-exclsats      =               # (prn ...)
-pos1-navsys        =15             # (1:gps+2:sbas+4:glo+8:gal+16:qzs+32:comp)
+pos1-navsys        =13             # (1:gps+2:sbas+4:glo+8:gal+16:qzs+32:comp)
 pos2-armode        =continuous     # (0:off,1:continuous,2:instantaneous,3:fix-and-hold)
 pos2-gloarmode     =off            # (0:off,1:on,2:autocal)
 pos2-arthres       =3
