--- a/recipes-gnss/rtklibexplorer/files/base.conf
+++ b/recipes-gnss/rtklibexplorer/files/base.conf
@@ -45,7 +45,7 @@ pos1-frequency     =l1         # (1:l1,2:l1+l2,3:l1+l2+l5,4:l1+l5)
 pos1-soltype       =forward    # (0:forward,1:backward,2:combined)
 pos1-elmask        =15         # (deg)
 pos1-snrmask_r     =on         # (0:off,1:on)
-pos1-snrmask_b     =off        # (0:off,1:on)
+pos1-snrmask_b     =on         # (0:off,1:on)
 pos1-snrmask_L1    =25,25,25,25,25,25,25,25,25
 pos1-snrmask_L2    =
 pos1-snrmask_L5    =
@@ -84,7 +84,7 @@ pos2-armaxiter     =1
 pos2-elmaskhold    =15         # (deg)
 pos2-aroutcnt      =20
 pos2-maxage        =30         # (s)
-pos2-syncsol       =off        # (0:off,1:on)
+pos2-syncsol       =on         # (0:off,1:on)
 pos2-slipthres     =0.05       # (m)
 pos2-rejionno      =1000       # (m)
 pos2-rejgdop       =30
@@ -124,7 +124,7 @@ stats-prniono      =0.001      # (m)
 stats-prntrop      =0.0001     # (m)
 stats-prnpos       =0          # (m)
 stats-clkstab      =5e-12      # (s/s)
-ant1-postype       =raw        # (0:llh,1:xyz,2:single,3:posfile,4:rinexhead,5:rtcm,6:raw)
+ant1-postype       =single     # (0:llh,1:xyz,2:single,3:posfile,4:rinexhead,5:rtcm,6:raw)
 ant1-pos1          =0          # (deg|m)
 ant1-pos2          =0          # (deg|m)
 ant1-pos3          =0          # (m|m)
@@ -132,7 +132,7 @@ ant1-anttype       =
 ant1-antdele       =0          # (m)
 ant1-antdeln       =0          # (m)
 ant1-antdelu       =0          # (m)
-ant2-postype       =raw        # (0:llh,1:xyz,2:single,3:posfile,4:rinexhead,5:rtcm,6:raw)
+ant2-postype       =single     # (0:llh,1:xyz,2:single,3:posfile,4:rinexhead,5:rtcm,6:raw)
 ant2-pos1          =0          # (deg|m)
 ant2-pos2          =0          # (deg|m)
 ant2-pos3          =0          # (m|m)
@@ -147,7 +147,7 @@ misc-sbasatsel     =0          # (0:all)
 misc-rnxopt1       =
 misc-rnxopt2       =
 misc-pppopt        =
-file-satantfile    =
+file-satantfile    =/etc/rtklib/data/igs08.atx
 file-rcvantfile    =
 file-staposfile    =
 file-geoidfile     =
