--- a/recipes-gnss/rtklibexplorer/files/base.conf
+++ b/recipes-gnss/rtklibexplorer/files/base.conf
@@ -3,13 +3,13 @@ console-timetype   =utc        # (0:gpst,1:utc,2:jst,3:tow)
 console-soltype    =deg        # (0:dms,1:deg,2:xyz,3:enu,4:pyl)
 console-solflag    =1          # (0:off,1:std+2:age/ratio/ns)
 inpstr1-type       =serial     # (0:off,1:serial,2:file,3:tcpsvr,4:tcpcli,7:ntripcli,8:ftp,9:http)
-inpstr2-type       =off        # (0:off,1:serial,2:file,3:tcpsvr,4:tcpcli,7:ntripcli,8:ftp,9:http)
+inpstr2-type       =tcpsvr     # (0:off,1:serial,2:file,3:tcpsvr,4:tcpcli,7:ntripcli,8:ftp,9:http)
 inpstr3-type       =off        # (0:off,1:serial,2:file,3:tcpsvr,4:tcpcli,7:ntripcli,8:ftp,9:http)
 inpstr1-path       =ttyACM0:115200:8:n:1:off
-inpstr2-path       =127.0.0.1:3139
+inpstr2-path       =:3139
 inpstr3-path       =anonymous:none@cddis.gsfc.nasa.gov/gps/products/%W/igu%W%D_%hb.sp3.Z::T=-21600,21600,0,0
 inpstr1-format     =ubx        # (0:rtcm2,1:rtcm3,2:oem4,3:oem3,4:ubx,5:swiftnav,6:hemis,7:skytraq,8:gw10,9:javad,10:nvs,11:binex,12:rt17,13:sbf,14:cmr,15:tersus,18:sp3)
-inpstr2-format     =ubx        # (0:rtcm2,1:rtcm3,2:oem4,3:oem3,4:ubx,5:swiftnav,6:hemis,7:skytraq,8:gw10,9:javad,10:nvs,11:binex,12:rt17,13:sbf,14:cmr,15:tersus,18:sp3)
+inpstr2-format     =rtcm3      # (0:rtcm2,1:rtcm3,2:oem4,3:oem3,4:ubx,5:swiftnav,6:hemis,7:skytraq,8:gw10,9:javad,10:nvs,11:binex,12:rt17,13:sbf,14:cmr,15:tersus,18:sp3)
 inpstr3-format     =sp3        # (0:rtcm2,1:rtcm3,2:oem4,3:oem3,4:ubx,5:swiftnav,6:hemis,7:skytraq,8:gw10,9:javad,10:nvs,11:binex,12:rt17,13:sbf,14:cmr,15:tersus,18:sp3)
 inpstr2-nmeareq    =off        # (0:off,1:latlon,2:single)
 inpstr2-nmealat    =0          # (deg)
@@ -28,8 +28,8 @@ logstr1-path       =0.0.0.0:3131
 logstr2-path       =0.0.0.0:3132
 logstr3-path       =0.0.0.0:3133
 misc-svrcycle      =10         # (ms)
-misc-timeout       =30000      # (ms)
-misc-reconnect     =30000      # (ms)
+misc-timeout       =3000       # (ms)
+misc-reconnect     =2000       # (ms)
 misc-nmeacycle     =5000       # (ms)
 misc-buffsize      =32768      # (bytes)
 misc-navmsgsel     =rover      # (0:all,1:rover,2:base,3:corr)
@@ -58,7 +58,7 @@ pos1-posopt1       =off        # (0:off,1:on)
 pos1-posopt2       =off        # (0:off,1:on)
 pos1-posopt3       =off        # (0:off,1:on,2:precise)
 pos1-posopt4       =off        # (0:off,1:on)
-pos1-posopt5       =off        # (0:off,1:on)
+pos1-posopt5       =on         # (0:off,1:on)
 pos1-posopt6       =off        # (0:off,1:on)
 pos1-exclsats      =           # (prn ...)
 pos1-navsys        =15         # (1:gps+2:sbas+4:glo+8:gal+16:qzs+32:comp)
@@ -74,19 +74,19 @@ pos2-arthres4      =0.05
 pos2-varholdamb    =0.001      # (cyc^2)
 pos2-gainholdamb   =0.01
 pos2-arlockcnt     =20
-pos2-minfixsats    =3
-pos2-minholdsats   =5
-pos2-mindropsats   =12
+pos2-minfixsats    =5
+pos2-minholdsats   =4
+pos2-mindropsats   =10
 pos2-rcvstds       =on         # (0:off,1:on)
 pos2-arelmask      =15         # (deg)
-pos2-arminfix      =20
+pos2-arminfix      =10
 pos2-armaxiter     =1
 pos2-elmaskhold    =15         # (deg)
 pos2-aroutcnt      =20
 pos2-maxage        =30         # (s)
 pos2-syncsol       =on         # (0:off,1:on)
 pos2-slipthres     =0.05       # (m)
-pos2-rejionno      =1000       # (m)
+pos2-rejionno      =30         # (m)
 pos2-rejgdop       =30
 pos2-niter         =1
 pos2-baselen       =0          # (m)
@@ -124,7 +124,7 @@ stats-prniono      =0.001      # (m)
 stats-prntrop      =0.0001     # (m)
 stats-prnpos       =0          # (m)
 stats-clkstab      =5e-12      # (s/s)
-ant1-postype       =single     # (0:llh,1:xyz,2:single,3:posfile,4:rinexhead,5:rtcm,6:raw)
+ant1-postype       =raw        # (0:llh,1:xyz,2:single,3:posfile,4:rinexhead,5:rtcm,6:raw)
 ant1-pos1          =0          # (deg|m)
 ant1-pos2          =0          # (deg|m)
 ant1-pos3          =0          # (m|m)
@@ -132,7 +132,7 @@ ant1-anttype       =
 ant1-antdele       =0          # (m)
 ant1-antdeln       =0          # (m)
 ant1-antdelu       =0          # (m)
-ant2-postype       =single     # (0:llh,1:xyz,2:single,3:posfile,4:rinexhead,5:rtcm,6:raw)
+ant2-postype       =rtcm       # (0:llh,1:xyz,2:single,3:posfile,4:rinexhead,5:rtcm,6:raw)
 ant2-pos1          =0          # (deg|m)
 ant2-pos2          =0          # (deg|m)
 ant2-pos3          =0          # (m|m)
