Dont wait for iterations, calculated on arrival

--- a/recipes-gnss/rtklibexplorer/files/base.conf
+++ b/recipes-gnss/rtklibexplorer/files/base.conf
@@ -84,7 +84,7 @@ pos2-armaxiter     =1
 pos2-elmaskhold    =15         # (deg)
 pos2-aroutcnt      =20
 pos2-maxage        =30         # (s)
-pos2-syncsol       =on         # (0:off,1:on)
+pos2-syncsol       =off        # (0:off,1:on)
 pos2-slipthres     =0.05       # (m)
 pos2-rejionno      =30         # (m)
 pos2-rejgdop       =30
