--- a/recipes-gnss/rtklibexplorer/files/nettest.conf
+++ b/recipes-gnss/rtklibexplorer/files/nettest.conf
@@ -4,13 +4,13 @@ console-soltype    =deg        # (0:dms,1:deg,2:xyz,3:enu,4:pyl)
 console-solflag    =1          # (0:off,1:std+2:age/ratio/ns)
 inpstr1-type       =tcpcli     # (0:off,1:serial,2:file,3:tcpsvr,4:tcpcli,7:ntripcli,8:ftp,9:http)
 inpstr2-type       =tcpcli     # (0:off,1:serial,2:file,3:tcpsvr,4:tcpcli,7:ntripcli,8:ftp,9:http)
-inpstr3-type       =off        # (0:off,1:serial,2:file,3:tcpsvr,4:tcpcli,7:ntripcli,8:ftp,9:http)
+inpstr3-type       =tcpcli     # (0:off,1:serial,2:file,3:tcpsvr,4:tcpcli,7:ntripcli,8:ftp,9:http)
 inpstr1-path       =rover:3131
 inpstr2-path       =base:3131
-inpstr3-path       =anonymous:none@cddis.gsfc.nasa.gov/gps/products/%W/igu%W%D_%hb.sp3.Z::T=-21600,21600,0,0
+inpstr3-path       =base:3141
 inpstr1-format     =ubx        # (0:rtcm2,1:rtcm3,2:oem4,3:oem3,4:ubx,5:swiftnav,6:hemis,7:skytraq,8:gw10,9:javad,10:nvs,11:binex,12:rt17,13:sbf,14:cmr,15:tersus,18:sp3)
-inpstr2-format     =rtcm3      # (0:rtcm2,1:rtcm3,2:oem4,3:oem3,4:ubx,5:swiftnav,6:hemis,7:skytraq,8:gw10,9:javad,10:nvs,11:binex,12:rt17,13:sbf,14:cmr,15:tersus,18:sp3)
-inpstr3-format     =sp3        # (0:rtcm2,1:rtcm3,2:oem4,3:oem3,4:ubx,5:swiftnav,6:hemis,7:skytraq,8:gw10,9:javad,10:nvs,11:binex,12:rt17,13:sbf,14:cmr,15:tersus,18:sp3)
+inpstr2-format     =ubx        # (0:rtcm2,1:rtcm3,2:oem4,3:oem3,4:ubx,5:swiftnav,6:hemis,7:skytraq,8:gw10,9:javad,10:nvs,11:binex,12:rt17,13:sbf,14:cmr,15:tersus,18:sp3)
+inpstr3-format     =rtcm3      # (0:rtcm2,1:rtcm3,2:oem4,3:oem3,4:ubx,5:swiftnav,6:hemis,7:skytraq,8:gw10,9:javad,10:nvs,11:binex,12:rt17,13:sbf,14:cmr,15:tersus,18:sp3)
 inpstr2-nmeareq    =off        # (0:off,1:latlon,2:single)
 inpstr2-nmealat    =0          # (deg)
 inpstr2-nmealon    =0          # (deg)
@@ -84,7 +84,7 @@ pos2-armaxiter     =1
 pos2-elmaskhold    =15         # (deg)
 pos2-aroutcnt      =20
 pos2-maxage        =30         # (s)
-pos2-syncsol       =on         # (0:off,1:on)
+pos2-syncsol       =off        # (0:off,1:on)
 pos2-slipthres     =0.05       # (m)
 pos2-rejionno      =30         # (m)
 pos2-rejgdop       =30
