--- a/recipes-gnss/rtklibexplorer/files/nettest.conf
+++ b/recipes-gnss/rtklibexplorer/files/nettest.conf
@@ -27,7 +27,7 @@ logstr3-type       =tcpsvr     # (0:off,1:serial,2:file,3:tcpsvr,4:tcpcli,6:ntri
 logstr1-path       =0.0.0.0:3131
 logstr2-path       =0.0.0.0:3132
 logstr3-path       =0.0.0.0:3133
-misc-svrcycle      =10         # (ms)
+misc-svrcycle      =50         # (ms)
 misc-timeout       =3000       # (ms)
 misc-reconnect     =2000       # (ms)
 misc-nmeacycle     =5000       # (ms)
@@ -37,7 +37,7 @@ misc-proxyaddr     =
 misc-fswapmargin   =30         # (s)
 misc-startcmd      =/etc/rtklib/rtkstart.sh
 misc-stopcmd       =/etc/rtklib/rtkstop.sh
-file-cmdfile1      =/etc/rtklib/base.cmd
+file-cmdfile1      =
 file-cmdfile2      =
 file-cmdfile3      =
 pos1-posmode       =static     # (0:single,1:dgps,2:kinematic,3:static,4:static-start,5:movingbase,6:fixed,7:ppp-kine,8:ppp-static,9:ppp-fixed)
