--- a/recipes-gnss/rtklibexplorer/files/nettest.conf
+++ b/recipes-gnss/rtklibexplorer/files/nettest.conf
@@ -50,7 +50,7 @@ pos1-snrmask_L1    =25,25,25,25,25,25,25,25,25
 pos1-snrmask_L2    =
 pos1-snrmask_L5    =
 pos1-dynamics      =off        # (0:off,1:on)
-pos1-tidecorr      =on         # (0:off,1:on,2:otl)
+pos1-tidecorr      =off        # (0:off,1:on,2:otl)
 pos1-ionoopt       =brdc       # (0:off,1:brdc,2:sbas,3:dual-freq,4:est-stec,5:ionex-tec,6:qzs-brdc,7:qzs-lex,8:stec)
 pos1-tropopt       =saas       # (0:off,1:saas,2:sbas,3:est-ztd,4:est-ztdgrad,5:ztd)
 pos1-sateph        =brdc       # (0:brdc,1:precise,2:brdc+sbas,3:brdc+ssrapc,4:brdc+ssrcom)
